--- a/config-client-dev.yml
+++ b/config-client-dev.yml
@@ -2,4 +2,4 @@ server:
   port: 9000
 name: frank
 age: 18
-desc: java spring cloud config server dev version 1.0
+desc: java spring cloud config git server dev version 2.0
