--- a/config-client-pro.yml
+++ b/config-client-pro.yml
@@ -2,4 +2,4 @@ server:
   port: 9001
 name: frank
 age: 20
-desc: java spring cloud config server production version 1.0
+desc: java spring cloud config git server production version 2.0
